마커 위치 수정 , router 정리 , 헤더 배경색 수정

--- a/docs/0204한거.md
+++ b/docs/0204한거.md
@@ -134,17 +134,123 @@ pnpm add -D @types/jsonwebtoken @types/bcryptjs
 
 ---
 
-## 남은 작업
+---
 
-- [ ] 회원가입/로그인 기능 테스트
-- [ ] 네이버 지도 표시 테스트
-- [ ] GitHub Actions 워크플로우 실행 테스트
+## 추가 논의 사항
+
+### 7. 축제 데이터 개수 (~300개)
+
+**질문:** 축제 개수 300개는 하드코딩된 제한인가?
+
+**답변:** 아니오, 하드코딩된 제한이 아님
+
+**데이터 수집 로직 (`py_scripts/modules/festival.py`):**
+- API 요청 범위: 서울시 열린데이터 광장에서 1~1000개 범위로 요청
+- 날짜 필터링: 1개월 전 ~ 1년 후
+- 결과: 필터링 후 실제 존재하는 축제 수 = ~257-300개
+
+**결론:** 시기에 따라 축제 수가 달라짐 (성수기/비수기), 계절별로 200~400개 사이에서 변동
 
 ---
 
-## 참고 파일
+### 8. 데이터 저장 방식 (JSON vs Supabase DB)
 
-- 계획 파일: `docs/0204plan.md`
-- Vercel 설정: `vercel.json`
-- GitHub Actions: `.github/workflows/data-collection.yml`
-- API 엔드포인트: `api/` 폴더
+**현재 구조:**
+| 데이터 | 저장 위치 | 이유 |
+|--------|----------|------|
+| 축제/장소/날씨 | JSON 파일 (`public/data/`) | 정적 데이터, GitHub Actions로 주기적 업데이트 |
+| 사용자/즐겨찾기/리뷰 | Supabase DB | 동적 데이터, 실시간 CRUD 필요 |
+
+**JSON 파일 방식의 장점:**
+- Vercel에서 정적 파일로 서빙 → 빠른 로딩
+- DB 쿼리 비용 없음
+- GitHub Actions로 자동 업데이트
+
+---
+
+### 9. GitHub Secrets 설정 주의사항
+
+**문제:** GitHub Actions에서 환경변수를 못 읽음
+
+**원인:** Secrets를 "Environment secrets"에 저장함 (Repository secrets가 아님)
+
+**해결 방법:**
+1. **Repository secrets 사용** (권장)
+   - Settings → Secrets and variables → Actions → Repository secrets
+
+2. **Environment secrets 사용 시**
+   - 워크플로우에 `environment:` 키 추가 필요
+   ```yaml
+   jobs:
+     collect-all-data:
+       runs-on: ubuntu-latest
+       environment: production  # ← 이거 추가
+   ```
+
+---
+
+---
+
+## 추가로 할 작업
+
+### 1. 찜하기(즐겨찾기) 로직 수정
+
+**현상:**
+- 하트 버튼 누르면 눌리긴 하는데 바로 풀려버림
+- 다른 축제와 같이 눌림 (상태 동기화 문제)
+- 콘솔 로그 제거 필요
+
+**해결 필요:**
+- 찜하기 상태 관리 로직 점검
+- API 호출 후 상태 업데이트 동기화
+- `console.log` 제거
+
+---
+
+### 2. 계절별 파티클 효과 추가
+
+**라이브러리:** `@tsparticles/react`
+
+**계절별 효과:**
+| 계절 | 효과 |
+|------|------|
+| 봄 (3-5월) | 분홍색 벚꽃 잎 (Sakura) |
+| 여름 (6-8월) | 반짝이는 햇살 / 불꽃놀이 |
+| 가을 (9-11월) | 노란색/갈색 낙엽 |
+| 겨울 (12-2월) | 눈송이 (Snow) |
+
+**구현 사항:**
+- 첫 화면 로드 시 현재 월 기준으로 파티클 자동 적용
+- 계절 버튼 클릭 시에도 해당 계절 파티클 표시
+
+---
+
+### 3. 첫 화면 지도 마커/동그라미 위치 불일치
+
+**현상:**
+- 마커와 동그라미(클러스터?)의 위치가 맞지 않음
+
+**해결 필요:**
+- 좌표 계산 로직 확인
+- 마커와 오버레이 위치 동기화
+
+---
+
+### 4. 네이버 지도 마커 표시 불안정
+
+**현상:**
+- 마커가 나타날 때도 있고 안 나타날 때도 있음
+- 축소/확대 시에만 잠깐 보이기도 함
+- 재현이 어려움
+
+**가능한 원인:**
+- 지도 로딩 타이밍 이슈
+- 마커 렌더링 조건 문제
+- z-index 또는 레이어 충돌
+
+**해결 필요:**
+- 마커 생성 타이밍 점검
+- 지도 `idle` 이벤트 후 마커 렌더링
+- 디버깅을 위한 로그 추가
+
+---
