모바일 리스트 상세페이지 라우터 문제 해결

--- a/docs/0209한거.md
+++ b/docs/0209한거.md
@@ -150,3 +150,45 @@ useEffect(() => {
 | `FooterContainer.tsx` | lg:→md: 브레이크포인트 통일 |
 
 ---
+
+### 8. 모바일 레이아웃 버그 4가지 수정
+
+#### 8-1. 상세페이지 클릭 시 지도로 돌아감
+
+**원인**: `handleFestivalSelect`에서 `setSelectedFestival(festival)` 후 `setSelectedDistrict(GUNAME)` 호출 → `setSelectedDistrict`가 내부적으로 `selectedFestival`을 `null`로 리셋 → URL sync가 `/`로 돌아감
+**해결**: 호출 순서 반전 (district 먼저, festival 나중 = React 배치 업데이트에서 최종값 유지)
+
+| 파일 | 변경 |
+|------|------|
+| `FestivalContext.tsx` | handleFestivalSelect 호출 순서 반전 (2줄 swap) |
+
+#### 8-2. 모바일에서 계절버튼 안보임
+
+**원인**: SeasonButton이 CardLayout 안에서 지도(max-h-[60vh]) 아래에 밀려 안 보임
+**해결**: SeasonButton에 `order-first md:order-0` CSS 적용 → 모바일에서 지도 위에 표시, 데스크톱은 기존과 동일
+
+| 파일 | 변경 |
+|------|------|
+| `LeftContent.tsx` | SeasonButton에 `order-first md:order-0` div wrapper 추가 |
+
+#### 8-3. 모바일 리스트에서 클릭 시 바로 상세로 이동
+
+**원인**: FestivalCard onClick이 `setSelectedFestival`만 호출 → 모바일 탭 분리로 프리뷰 안 보임
+**해결**: `window.matchMedia('(max-width: 767px)')` 체크 → 모바일: `navigateToDetail`, 데스크톱: `setSelectedFestival` (기존 동작 유지)
+
+| 파일 | 변경 |
+|------|------|
+| `FestivalListContainer.tsx` | navigateToDetail 추가, 클릭 핸들러 matchMedia 분기 |
+
+#### 8-4. 모바일 상세에서 Right→Left 순서
+
+**상태**: App.tsx에 `order-1 md:order-2`, `order-2 md:order-1` 이미 적용됨 → 별도 수정 없이 정상 동작
+
+---
+
+## 남은 작업
+
+- [ ] 모바일 레이아웃 실제 테스트 (375px, 390px 뷰포트)
+- [ ] 파티클 속도 안정성 최종 확인
+- [ ] 빌드 확인 (`pnpm build`)
+- [ ] 배포 후 모바일 브라우저 테스트
